# softRasterizator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Lsr3D/: CMakeLists.txt
Lsr3D/include/Lsr3D/core/: ImageLoader.h  ModelLoader.h  Rasterizer.h  camera.h  handle.h  render.h  resource.h  shader.h
Lsr3D/include/Lsr3D/test/: test1.h  test2.h  test3.h  test4.h  test5.h
Lsr3D/include/Lsr3D/utils/: MVP.h  utils.h
Lsr3D/src/core/: ModelLoader.cpp  Rasterizer.cpp  camera.cpp  render.cpp  shader.cpp
Lsr3D/src/utils/: MVP.cpp  utils.cpp
assets/model/cube/: test.mtl
include/: util.h
include/core/: Rasterizer.h  camera.h
include/test/: test1.h  test2.h
include/utils/: MVP.h  utils.h
loader/: CMakeLists.txt  README.md
loader/include/: ModelLoader.h
loader/src/: ModelLoader.cpp
loader/test/: CMakeLists.txt  README.md  main.cpp  test.mtl
src/core/: Rasterizer.cpp  camera.cpp  shader.cpp
src/utils/: MVP.cpp  utils.cpp
test/: camera_example.cpp  load_image.cpp
